--- a/final/src/main/resources/templates/blog.html
+++ b/final/src/main/resources/templates/blog.html
@@ -79,7 +79,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="home_content text-center">
-							<div class="home_title">th</div>
+							<div class="home_title"></div>
 							<div class="booking_form_container">
 								<form action="#" class="booking_form" id="booking_form">
 									<div class="d-flex flex-xl-row flex-column align-items-start justify-content-start">
