做出動態room選單 javascript好難寫 接下來要做的還有 : 第二層查詢(應該不會需要動態選單) 訂房按鈕 查詢我的訂單

--- a/final/src/main/resources/static/styles/main_styles.css
+++ b/final/src/main/resources/static/styles/main_styles.css
@@ -640,7 +640,7 @@ section
 }
 .booking_input_container
 {
-	width: 100%;
+	width: 150%;
 }
 .booking_input_container > div
 {
@@ -649,10 +649,11 @@ section
 .booking_input_container > div:first-child,
 .booking_input_container > div:nth-child(2)
 {
-	width: 32.60869565217391%;
+	width: 23.60869565217391%;
 }
 .booking_input_container > div:nth-child(3),
-.booking_input_container > div:nth-child(4)
+.booking_input_container > div:nth-child(4),
+.booking_input_container > div:nth-child(5)
 {
 	width: 17.39130434782609%;
 }
