--- a/final/src/main/resources/templates/contact.html
+++ b/final/src/main/resources/templates/contact.html
@@ -31,7 +31,7 @@
 						<li><a href="about.html">About us</a></li>
 						<li><a href="#">Rooms</a></li>
 						<li><a href="blog.html">Blog</a></li>
-						<li class="active"><a href="contact.html">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
 				<div class="book_button"><a href="booking.html">Book Online</a></div>
